<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tela2Activity">

    <TextView
        android:id="@+id/tvTela2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTela2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btTela2PrimeiraTela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btTela2PrimeiraTela"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btTela2TerceiraTela"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTela2"
        app:layout_constraintVertical_bias="0.948" />

    <Button
        android:id="@+id/btTela2TerceiraTela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btTela2TerceiraTela"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTela2"
        app:layout_constraintVertical_bias="0.948" />
</androidx.constraintlayout.widget.ConstraintLayout>